# pil-cairo

./: Cargo.toml  LICENSE  README.md  pyproject.toml
src/: lib.rs
src/pil_cairo/: __init__.py  _core.pyi
tests/: test_init.py
